# oal

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  conanfile.py  pyproject.toml
.github/workflows/: build-and-test.yml
cmake/: testing.cmake
docs/: conf.py  index.rst
docs/api/: index.rst
docs/api/coords/: RotationSequence.rst  dcm_from_eulers.rst  index.rst  rotate_xyz.rst
docs/api/units/: AngleUnit.rst  index.rst  to_degrees.rst  to_radians.rst
docs/manual/: coordinate_systems.rst  index.rst
include/: oal.h
include/oal/: coords.hpp  core.hpp  units.hpp
include/oal/coords/: rotations.hpp
src/: core.cpp  oal.cpp  units.cpp
src/coords/: rotations.cpp
src/python/: coords.cpp  core.cpp  python.hpp  units.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
tests/cpp/: CMakeLists.txt  matchers.hpp
tests/cpp/coords/: CMakeLists.txt  test_dcm_from_euler.cpp  test_single_axis_rotations.cpp
tests/cpp/core/: CMakeLists.txt  test_core.cpp
tests/cpp/units/: CMakeLists.txt  test_angle_units.cpp
tests/python/: helpers.py  test_rotations.py  test_units.py
