[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "oal"
version = "0.0.1"
dependencies = [
    "numpy>=2.2.4",
]

[tool.scikit-build]
cmake.define = { "OAL_PYTHON" = "ON" }

[dependency-groups]
dev = [
    "furo>=2024.8.6",
    "hypothesis[numpy]>=6.131.0",
    "pytest>=8.3.5",
    "pytest-cmake>=0.13.0",
    "scikit-build-core>=0.11.1",
    "sphinx>=8.2.3",
    "sphinx-press-theme>=0.9.1",
    "sphinx-tabs>=3.4.7",
]
